--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/solid-js": "^5.1.1",
     "@tailwindcss/vite": "^4.1.14",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.14.1",
+    "solid-js": "^1.9.9",
     "tailwindcss": "^4.1.14"
   }
 }
