--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@astrojs/solid-js": "^5.1.1",
+    "@astrojs/svelte": "^7.2.2",
     "@tailwindcss/vite": "^4.1.14",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.14.1",
     "solid-js": "^1.9.9",
-    "tailwindcss": "^4.1.14"
+    "svelte": "^5.43.5",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3"
   }
 }
