--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
     "@astrojs/solid-js": "^5.1.1",
     "@astrojs/svelte": "^7.2.2",
     "@tailwindcss/vite": "^4.1.14",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.14.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "solid-js": "^1.9.9",
     "svelte": "^5.43.5",
     "tailwindcss": "^4.1.14",
