--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.6.1",
     "@astrojs/react": "^4.4.2",
     "@astrojs/solid-js": "^5.1.1",
     "@astrojs/svelte": "^7.2.2",
