--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,18 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@img/*": [
+        "src/assets/img/*"
+      ]
+    }
   }
 }
