--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.6.1",
     "@astrojs/react": "^4.4.2",
     "@astrojs/solid-js": "^5.1.1",
     "@astrojs/svelte": "^7.2.2",
+    "@astrojs/vercel": "^9.0.2",
     "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
